added hint div to index, styled it in aecss and responsive stylesheets, and scripted it to only show if users don't click radio dial buttons and delays hint message from displaying if user mouses over radio dial and question mark buttons or clicks on the question mark button for the bio.

--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
             </div>
         </div>
 
+        <div class="hints">
+            <p>Use the radio dials to play a song or the SoundCloud dial to visit our SoundCloud.</p>
+        </div>
+        
         <div id="radio">
             
     <!--enigma radio desktop pic-->
