added 'Come in.' to description.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="keywords" content=" Ars, Enigma, rock, music, band" />
 
-    <meta name="description" property="og:description" content="Website for the band Ars Enigma. Let's see what's one the radio." />
+    <meta name="description" property="og:description" content="Website for the band Ars Enigma. Come in. Let's see what's one the radio." />
     
     <meta name="image" property="og:image" content="img/metaImageThumbnail2.png" />
     
