tweaked keywords meta.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <! DOCTYPE html>
 <html lang="en-us">
 <head>
-    <meta name="keywords" content=" Ars, Enigma, rock, music, band" />
+    <meta name="keywords" content=" Ars, Enigma, rock, Ars Enigma" />
 
     <meta name="description" property="og:description" content="Come in. Let's see what's on the radio." />
     
