tweaked keywords meta and changed description meta.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <! DOCTYPE html>
 <html lang="en-us">
 <head>
-    <meta name="keywords" content=" Ars, Enigma, rock, music, band" />
+    <meta name="keywords" content=" Ars, Enigma, rock, Ars Enigma" />
 
-    <meta name="description" property="og:description" content="Website for the band Ars Enigma. Come in. Let's see what's one the radio." />
+    <meta name="description" property="og:description" content="Come in. Let's see what's on the radio." />
     
     <meta name="image" property="og:image" content="img/metaImageThumbnail3.png" />
     
